# rdf12-to-pg

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: checks.yml
cypher/: README.md  pyproject.toml  rdf12_to_neo4j  rdf12_to_neo4j.py
cypher/examples/cypher/v1/: 02-predicate-object-list.cypher  04-blank-nodes.cypher  06-rdf-reifies.cypher  07-asserted-and-reified.cypher  10-reifier-label.cypher  11-multiple-reifies.cypher  12-one-reifier-many-propositions.cypher  13-annotation-block.cypher  15-mixed-rdf12.cypher
cypher/examples/cypher/v2/: 01-basic.cypher  03-literals.cypher  05-collections.cypher  06-rdf-reifies.cypher  07-asserted-and-reified.cypher  08-triple-term-object.cypher  10-reifier-label.cypher  11-multiple-reifies.cypher  12-one-reifier-many-propositions.cypher  13-annotation-block.cypher  14-irirefs.cypher  15-mixed-rdf12.cypher
cypher/examples/cypher/v3/: 01-basic.cypher  02-predicate-object-list.cypher  03-literals.cypher  04-blank-nodes.cypher  05-collections.cypher  06-rdf-reifies.cypher  07-asserted-and-reified.cypher  08-triple-term-object.cypher  09-nested-triple-terms.cypher  10-reifier-label.cypher  11-multiple-reifies.cypher  12-one-reifier-many-propositions.cypher  13-annotation-block.cypher  14-irirefs.cypher  15-mixed-rdf12.cypher
cypher/examples/ttl/: 05-collections.ttl
cypher/rdf12_to_neo4j_lib/: __init__.py  converter.py
cypher/tests/: test_converter.py
experiments/: README.md  generate_latex_chart_from_csv_data.py  generate_starbench_samples.py  run_experiments.py  run_starbench_experiments.py  section_experiments_extended.md  validate_results.py
experiments/data/: synthetic-0.5mb.ttl  synthetic-1.5mb.ttl  synthetic-1mb.ttl  synthetic-2.5mb.ttl  synthetic-2mb.ttl
experiments/results/: README.md  conversion_raw.csv  conversion_summary.csv  datasets.csv  neo4j_load_raw.csv  neo4j_load_summary.csv
synthetic-generator/: README.md  pyproject.toml  synthetic_gen  synthetic_gen.py
synthetic-generator/synthetic_gen_lib/: __init__.py  __main__.py  generator.py
synthetic-generator/tests/: test_generator.py
yarspg/: README.md  pyproject.toml  rdf12_to_yarspg  rdf12_to_yarspg.py  turtle_to_yarspg.py
yarspg/rdf12_to_yarspg_lib/: __init__.py  converter.py  rdf_converter.py
yarspg/tests/: test_converter.py
(+11 files in other folders)
