[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rdf12-to-neo4j"
version = "0.1.0"
description = "Standalone RDF 1.2 Turtle to Cypher converter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Dominik Tomaszuk" }
]
dependencies = []

[project.urls]
Repository = "https://github.com/domel/rdf12-to-pg"

[project.optional-dependencies]
dev = [
  "ruff>=0.15.0"
]

[project.scripts]
rdf12-to-cypher = "rdf12_to_neo4j_lib.converter:main"

[tool.ruff]
target-version = "py310"

[tool.setuptools]
py-modules = ["rdf12_to_neo4j"]

[tool.setuptools.packages.find]
include = ["rdf12_to_neo4j_lib*"]
