[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rdf12-synthetic-generator"
version = "0.1.0"
description = "Standalone synthetic RDF 1.2 Turtle generator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Dominik Tomaszuk" }
]
dependencies = []

[project.urls]
Repository = "https://github.com/domel/rdf12-to-pg"

[project.optional-dependencies]
dev = [
  "ruff>=0.15.0"
]

[project.scripts]
rdf12-synthetic = "synthetic_gen_lib.generator:main"

[tool.ruff]
target-version = "py310"

[tool.setuptools]
py-modules = ["synthetic_gen"]

[tool.setuptools.packages.find]
include = ["synthetic_gen_lib*"]
